@@ -1,5 +1,12 @@
 2000-02-08  Yoshiki Hayashi  <yoshiki@xemacs.org>
 
+	* mime-view.el: Fix byte-compiler warnings.
+	* mime-play.el: Ditto.
+	(mime-preview-quitting-method-for-mime-show-message-mode):
+	Check whether raw-buffer exists.
+
+2000-02-08  Yoshiki Hayashi  <yoshiki@xemacs.org>
+
 	* Makefile: (texinfmt, xtexinfmt): New rule to format Texinfo
 	file with Emacs and XEmacs.
 
